added manifest and service worker file to make PWA app

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+  <link rel="manifest" href="manifest.json">
+
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="application-name" content="exchange-io">
+<meta name="apple-mobile-web-app-title" content="exchange-io">
+<meta name="theme-color" content="#0275d8">
+<meta name="msapplication-navbutton-color" content="#0275d8">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="msapplication-starturl" content="/">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/5024/5024584.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
